Mobile UI: overflow--issue--min-width-removed

--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ button:hover{
     font-weight: 400;
     color: hsl(0, 100%, 67%);
 }
-@media only screen and (min-width: 375px) and (max-width: 600px){
+@media only screen and (max-width: 600px){
     body{
         /*overflow: auto;*/
         /*min-height: 100%;*/
